--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div id='loading_container'>
       Loading...
       <div id='loading_progress'></div>
-      <div id="intro_image"><img src="images/intro_gif.gif"/></div>
+      <div id="intro_image"><img src="src/images/intro_gif.gif"/></div>
     </div>
     <div id="refresh-button"></div>
     <script>
@@ -71,6 +71,6 @@
         document.location.reload();
       });
     </script>
-    <script src="js/bundle.js"></script>
+    <script src="src/js/bundle.js"></script>
   </body>
 </html>
