--- a/index.html
+++ b/index.html
@@ -71,6 +71,6 @@
         document.location.reload();
       });
     </script>
-    <script src="src/js/bundle.js"></script>
+    <script src="src/js/main.js"></script>
   </body>
 </html>
